--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/outfit": "^5.0.13",
     "@fontsource/roboto": "^5.0.13",
     "class-variance-authority": "^0.7.0",
+    "init": "^0.1.2",
     "lucide-react": "^0.407.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,11 +25,13 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.3"
   }
 }
